fix(api-spec): simplified api spec
